<resources>
    <string name="app_name">Parking Inspector</string>
    <string name="selection_zone">Seleccione una zona para continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">Todos</string>
    <string name="bt">BT</string>
    <string name="mt">MT</string>
    <string name="lines">Lineas</string>
    <string name="fab_description">fab_description</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="zone">Zone</string>
    <string name="create">Create</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Don´t have an account?</string>
    <string name="nickname">Nickname</string>
    <string name="places">Places</string>
    <string name="vehicles">Vehicles</string>
    <string name="favorites">Favorites</string>
    <string name="floor_1">Floor 1</string>
    <string name="floor_2">Floor 2</string>
    <string name="floor_4">Floor 4</string>
    <string name="floor_3">Floor 3</string>
    <string name="number">Number</string>
    <string name="car_plate">Car Plate</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings\n</string>
    <string name="plate">Plate</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="standard_icon_btn_desc">icon button</string>
    <string name="fab_content_desc">Float Action Button</string>
    <string name="required">Required</string>
    <string name="color">Color</string>
    <string name="phone">Number phone</string>
    <string name="save">Save</string>
    <string name="contact_information">Contact information</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="code_postal">Code postal</string>
    <string name="vehicle_information">Vehicle information</string>
    <string name="update">Update</string>

    <string-array name="zones">
        <item>Barcelona</item>
        <item>Tarragona</item>
        <item>Sevilla</item>
    </string-array>
</resources>