<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="@color/blue_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvVehiclePlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvVehicleBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            app:layout_constraintTop_toBottomOf="@id/tvVehiclePlate"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tvVehicleModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            app:layout_constraintTop_toTopOf="@id/tvVehicleBrand"
            app:layout_constraintStart_toEndOf="@id/tvVehicleBrand"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="italic"/>


        <TextView
            android:id="@+id/tvVehicleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/tvVehicleModel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_call_24"
            app:tint="@color/green"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@id/ivEmail"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/standard_icon_btn_desc"
            android:src="@drawable/baseline_email_24"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:tint="@color/red" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/standard_icon_btn_desc"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>